# rgbd_slam

./: CMakeLists.txt
data/: final_result_after.g2o  final_result_before.g2o  result_after.g2o
include/: slamBase.h
src/: CMakeLists.txt  detecFeature.cpp  generatePointCloud.cpp  joinRgbdCloud.cpp  main.cpp  parameter.txt  slam.cpp  slamBase.cpp  slamEnd.cpp  visualOdometry.cpp
