CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(rgbd)

SET(CMAKE_CXX_STANDARD 11)
add_compile_options(-std=c++11)
SET( CMAKE_CXX_COMPILER "g++")

SET( EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin )
SET( LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib )

LINK_DIRECTORIES( ${PROJECT_SOURCE_DIR}/lib )

INCLUDE_DIRECTORIES( ${PROJECT_SOURCE_DIR}/include ${CMAKE_CURRENT_BINARY_DIR})

ADD_SUBDIRECTORY( ${PROJECT_SOURCE_DIR}/src )

